--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Web Page</title>
+    <title> Updated Simple Web Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Updated Website</h1>
         <nav>
             <a href="#about">About</a> |
             <a href="#services">Services</a> |
@@ -18,18 +19,31 @@
     <main>
         <section id="about">
             <h2>About Us</h2>
-            <p>We provide quality services to help you succeed online.</p>
+            <p>We provide quality services to help you succeed online, from development to consulting.</p>
         </section>
 
         <section id="services">
             <h2>Our Services</h2>
-            <p>Explore our offerings and solutions tailored for you.</p>
+            <ul>
+                <li>Web Development</li>
+                <li>SEO Optimization</li>
+                <li>Content Strategy</li>
+            </ul>
         </section>
     </main>
 
     <footer id="contact">
-        <p>Contact us at <a href="mailto:info@example.com">info@example.com</a></p>
-        <p>&copy; 2024 My Website</p>
+        <h2>Contact Us</h2>
+        <form action="submit_form.php" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <button type="submit">Submit</button>
+        </form>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
 </body>
 </html>
